set(ENV{PKG_CONFIG_PATH} /mnt/dpdk/install/lib/pkgconfig)
find_package(PkgConfig REQUIRED)
if (PKG_CONFIG_FOUND)
	pkg_check_modules(DPDK REQUIRED "libdpdk")
	if (DPDK_FOUND)
		message(STATUS "found dpdk via pkt-config")
	endif()
	add_definitions(${DPDK_STATIC_CFLAGS})
	include_directories(${DPDK_INCLUDE_DIRS})
	link_libraries(${DPDK_STATIC_LDFLAGS})
endif()

AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(l2fwd ${SRC_LIST})
target_link_libraries(l2fwd -lrt)
